--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gulu-vue3",
-  "version": "0.0.4",
+  "name": "y-vue3-ui",
+  "version": "0.0.0",
   "files": [
     "dist/lib/*"
   ],
-  "main": "dist/lib/gulu.js",
-  "module": "dist/lib/gulu.esm.js",
+  "main": "dist/lib/y-vue3-ui.js",
+  "module": "dist/lib/y-vue3-ui.esm.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
